# budapeshtengine

./: .gitignore  CMakeLists.txt
data/levels/test_baking/: level.lmf  pCube2_lm.tga  pPlane2_lm.tga  test_baking.ini  test_baking.level
data/models/: test_model.fbx  test_model.lmf
data/scripts/: editor_objects.txt  example_object.lua
data/scripts/render/: render_main.lua  render_materials.lua
data/shaders/: materials.lua
data/shaders/dx11/: compile_lightmapped.bat  compile_test.bat  lightmapped_generic.ps  lightmapped_generic.pso  lightmapped_generic.vs  lightmapped_generic.vso  test.ps  test.pso  test.vs  test.vso
data/shaders/gl33/: debug_draw.fs  debug_draw.vs  lightmapped_generic.fs  lightmapped_generic.vs  lightmapped_multipass_pointlight.fs  lightmapped_pointlight_lambert.fs  model_test.fs  model_test.vs
data/textures/system/: notex.tga
data/textures/temp/: read.me.txt
src/: CMakeLists.txt  everything.sln
src/editor/: editor.vcxproj  editor.vcxproj.filters  editor_shared.cpp  editor_shared.h  editorsystem.cpp  ieditorsystem.h
src/engine/: CMakeLists.txt  allocator.cpp  allocator.h  array.h  camera.cpp  camera.h  cmdmanager.cpp  cmdmanager.h  debug.cpp  debug.h  debugrender.cpp  debugrender.h  engine.cpp  engine.h  engine.vcxproj  engine.vcxproj.filters  engine_api.h  entity.cpp  entity.h  filesystem.cpp  filesystem.h  filesystem_physfs.cpp  fontsystem.cpp  fontsystem.h  igamepersistent.cpp  igamepersistent.h  input_system.cpp  input_system.h  iosdriver.h  level.cpp  level.h  level_mesh.cpp  level_mesh.h  logger.cpp  logger.h  material_system.cpp  material_system.h  mesh.cpp  mesh.h  object.h  (+21 more)
src/game/: game.vcxproj  game.vcxproj.filters  gamelib.cpp  gamelib.h  gamepersistent.cpp  gamepersistent.h  pch.h  player.cpp  player.h  worldspawn.cpp  worldspawn.h
src/main/: CMakeLists.txt  main.cpp  main.vcxproj  pch.h
src/render/: CMakeLists.txt  irenderdevice.h  microui_render.c  microui_render.h  render.cpp  render.h  render.vcxproj  render.vcxproj.filters  sokol_rdev.cpp  sokol_shared.h  sokolrenderdevice.cpp  texture.cpp  texture.h
src/sokol_rdev/: CMakeLists.txt  microui_render.c  pch.h  sokol_rdev.cpp  sokol_rdev.vcxproj  sokol_rdev.vcxproj.filters
src/sound/: CMakeLists.txt  pch.h  sound.cpp  sound.h  sound.vcxproj  sound.vcxproj.filters  sound_file.cpp  sound_file.h  sound_system_oal.cpp  sound_system_oal.h
src/utils/lmfconv/: daeconv.cpp  fbxconv.cpp  level_mesh.h  lmfconv.vcxproj  lmfconv.vcxproj.filters  main.cpp  pch.cpp  pch.h
